.k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: $(LEARNINGLOCKER_FQDN)
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              name: http
      - pathType: Prefix
        path: /data
        backend:
          service:
            name: xapi-service
            port:
              name: http
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui
            port:
              name: http
  tls:
  - hosts:
    - $(LEARNINGLOCKER_FQDN)
    secretName: web-tls-crt
